styled small-cart fixed small-cart overflow 2 scoll-bars feat add order-dialog refactor eventlisteners

--- a/styles/standard.css
+++ b/styles/standard.css
@@ -31,7 +31,3 @@ img, button{
 .width-1440px{
     width: 1440px;
 }
-
-.padding-left-right{
-    /* padding: 0 24px; */
-}
