--- a/styles/style.css
+++ b/styles/style.css
@@ -13,7 +13,6 @@ h2{
 
 body{
   font-family: 'Comic Sans MS', 'Manga Temple', sans-serif;
-  /* background-image: url(/assets/img/bg-titan-imbiss.png); */
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
@@ -26,13 +25,16 @@ body{
 }
 
 .small-cart{
-  position: absolute;
+  position: fixed;
   top: 0;
   left: 0;
-  width: 100vw;
+  right: 0;
+  bottom: 0;
+  width: 100%;
   height: 100vh;
   background: var(--bg-default);
   z-index: 2;
+  overflow-y: scroll;
 }
 
 header{
@@ -81,9 +83,9 @@ main{
 }
 
 .imbiss-logo{
-  position: relative;
-  top: -30px;
-  left: 500px;
+  position: absolute;
+  top: 70%;
+  left: 50%;
   height: 100px;
   width: 100px;
   border: 1px solid black;
@@ -111,7 +113,6 @@ main{
 }
 
 .nav-item:hover{
-  /* background-color: rgba(222, 205, 186, 0.828); */
   filter: drop-shadow(0 0 20px rgb(0, 0, 0));
 }
 
@@ -134,9 +135,6 @@ main{
 .menu{
   display: flex;
   flex-direction: column;
-  /* background-color: rgb(64, 0, 255); */
-  /* border: 1px solid black; */
-  /* flex: 0 0 calc(75% - 20px); 75% Breite */
   width: 100%;
 }
 
@@ -145,9 +143,8 @@ main{
   flex-direction: column;
   text-align: center;
   border: 1px solid black;
-  flex: 0 0 25%; /* 25% Breite */
+  flex: 0 0 33%; /* 25% Breite */
   padding: 16px;
-  /* background-color: rgb(64, 0, 255); */
 }
 
 .food-loader{
@@ -163,7 +160,6 @@ main{
   align-items: center;
   gap: 24px;
   margin: 24px;
-  /* width: calc(100% - 48px); */
   height: 200px;
   border: 1px solid black;
 
@@ -173,14 +169,13 @@ main{
 }
 
 .cart-loader{
-  /* flex: 1; */
   text-align: center;
 }
 
 .cart-card{
   display: flex;
   padding: 16px 0;
-  width: 350px;
+  width: 300px;
 
   h3{
     text-align: center;
@@ -197,6 +192,12 @@ main{
   height: 150px;
   width: 220px;
   object-fit: cover;
+}
+
+.food-card-details{
+  /* display: flex;
+  flex-direction: column;
+  gap: 8px; */
 }
 
 .cart-card-image{
@@ -235,8 +236,6 @@ main{
 
 .food-card-last{
   padding: 24px;
-  /* width: 100%;
-  height: 100%; */
   display: flex;
   justify-content: end;
 
@@ -253,7 +252,6 @@ main{
 .total{
   display: flex;
   justify-content: start;
-  /* border-top: 1px solid black;*/
   padding: 4px; 
 }
 
@@ -263,7 +261,6 @@ main{
 }
 
 .dialog-total{
-  /* /* border-top: 1px solid black;* */
   padding: 8px; 
 }
 
@@ -278,14 +275,7 @@ main{
   bottom: 0;
   background: rgb(253, 236, 217);
   cursor: pointer;
-  /* display: none; */
 }
-/* .test{
-  height: 100%;
-  width: 100%;
-  margin: 0;
-  padding: 0;
-} */
 
 
 .sticky-menu-dialog{
@@ -318,7 +308,57 @@ main{
   display: none;
 }
 
+.scroll-y-hidden{
+  overflow: hidden;
+}
+
+.order-button{
+  width: 100%;
+  height: 24px;
+  background-color: rgb(254 248 241);
+  border-radius: 5px;
+}
+
+dialog{
+  padding: 24px;
+}
+
+.order-dialog{
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  max-width: 100%;
+  height: auto;
+  background: var(--bg-default);
+}
+
 @media (max-width: 1070px){
+  h1{
+    font-size: var(--medium-font-size);
+    font-weight: 800;
+  }
+
+  h2{
+    font-weight: 800;
+    font-size: var(--minimal-font-size);
+  }
+
+  h3{
+    font-size: var(--minimal-font-size);
+  }
+
+.imbiss-logo{
+  position: absolute;
+  top: 68%;
+  left: 36%;
+  height: 80px;
+  width: 80px;
+  border: 1px solid black;
+  border-radius: 100%;
+  object-fit: cover; 
+  z-index: 1;
+}
   .cart{
     display: none;
   }
@@ -331,5 +371,26 @@ main{
     display: flex;
   }
 
+  .food-card{
+    height: 200px;
+    justify-content: start;
+  }
 
+  .food-card-image{
+    display: none;
+    width: 0;
+  }
+
+  .cart-card-image{
+    display: none;
+  }
+
+  .cart-card{
+    justify-content: center;
+    width: 100%;
+  }
+
+  .food-card-last{
+    margin-left: auto;
+  }
 }
